# fp25

./: .envrc  DEV.md  Makefile  README.md  exam.md  tasks.md  tasksA-C.md
Balyshev/MiniML/: .ocamlformat  MiniML.opam  dune-project
Balyshev/MiniML/Lambda/: Lambda.opam
Balyshev/MiniML/lib/: ast.ml  ast.mli  dune  ident.ml  inferencer.ml  inferencer.mli  interpreter.ml  interpreter.mli  monads.ml  monads.mli  parser.ml  parser.mli  parsetree.ml  parsetree.mli  tests.ml  typedtree.ml  typedtree.mli
Balyshev/MiniML/tests/: REPL.ml  dune  help.t  inferencer.t  interpreter.t  issues.t  parser.t  patterns.t
CSharpStrange_Kuznetsov/: CSharpStrange.opam  CSharpStrange_Kuznetsov.opam  dune-project
CSharpStrange_Kuznetsov/lib/: ast.ml  common.ml  common.mli  dune  interpret.ml  interpret.mli  monads.ml  monads.mli  parser.ml  parser.mli  prettyprinter.ml  prettyprinter.mli  typecheck.ml  typecheck.mli
CSharpStrange_Kuznetsov/tests/: ast_fact.t  dune  interpret_tests.ml  parser_tests.ml  parser_tests.mli  pp_tests.ml  typecheck_tests.ml
DMotuzov/: DMotuzov.opam  dune-project
DMotuzov/lib/: ast.ml  dune  interpreter.ml  interpreter.mli  parser.ml  parser.mli  prettyprinter.ml  prettyprinter.mli
DMotuzov/test_cram/: test.t
DMotuzov/test_cram/test_data/: test2.txt  test4.txt  test5.txt  test6.txt
DMotuzov/tests/: dune  interpreter.ml  parser.ml  prettyprinter.ml
DMotuzov/tests/qtest/: dune  qcheck_parser.ml
DMotuzov/tests/unittests/: dune  (+8 more)
Davletshin/: Davletshin.opam  Makefile  dune-project
Davletshin/lib/: Pprintast.ml  Pprintast.mli  Printast.ml  Printast.mli  ast.ml  ast.mli  dune  interpret.ml  interpret.mli  lambda.ml  lambda.mli  parser.ml  parser.mli  tests.ml  utils.ml  utils.mli
Davletshin/tests/: dune  gen_tests.ml  gen_tests.mli  interpret_tests.t
EChandraSutraDhar/: EChandraSutraDhar.opam  dune-project
EChandraSutraDhar/lib/: ast.ml  inferencer.ml  inferencer.mli  interpreter.ml  interpreter.mli  parser.ml
EChandraSutraDhar/tests/: ast_tests.ml  ast_tests.mli  inferencer_tests.ml  inferencer_tests.mli  interpreter_tests.ml  parser_tests.ml
Filichkin/tests/: adt_interpret_test.ml  adt_parser_test.ml  adt_typecheck_test.ml  dune  interprate_test.ml  interpret.t  parser_error_test.ml  parser_misc_test.ml  parser_misc_test.mli  parser_test.ml  print_test.ml  print_test.mli  qcheck_test.ml  qcheck_test.mli  typecheck_test.ml
Kharisov/tests/: dune  interpret_expect.ml  interpret_tests.t  parser_expect.ml  parser_qcheck.ml
Khmelev/: Khmelev.opam  dune-project
Khmelev/lib/: Printast.ml  Printast.mli  ast.ml  ast.mli  dune  interpret.ml  interpret.mli  parser.ml  parser.mli
Khmelev/tests/: dune  interpret_test.ml  interpret_test.mli  parser_test.ml  parser_test.mli  qcheck_parser_tests.ml  test.t
Kormilcyn/: .gitignore  .ocamlinit  Kormilcyn.opam  Lambda.opam  Makefile  Miniml.opam  dune-project
Kormilcyn/lib/: Pprintast.ml  Pprintast.mli  Printast.ml  ReductionCount.ml  ast.mli  dune  interpret.ml  interpret.mli  lambda.ml  parser.ml  parser.mli  tests.ml  utils.ml  utils.mli
Kormilcyn/tests/: dune  interpret_tests.t  mini_cli.ml  mini_ml.t
Krivonosov/: .gitignore  Krivonosov.opam  Krivonosov.opam.template  Makefile  dune-project
Krivonosov/lib/: Pprintast.ml  Printast.ml  ast.mli  dune  interpret.ml  interpret.mli  lambda.ml  lambda.mli  parser.ml  parser.mli  print.ml  print.mli  tests.ml  utils.ml
Krivonosov/tests/: dune  interpret_tests.t  tests.ml  tests.mli
Lambda/: Lambda.opam  dune-project
Maltsev/: Maltsev.opam  dune-project
Maltsev/lib/: Pprintast.ml  ast.mli  dune  interpret.ml  parser.ml  tests.ml
Maltsev/tests/: dune  interpret_test.t  parser_tests.ml
NSamodurov/: .gitignore  NSamodurov.opam  dune-project
NSamodurov/lib/: Pprintast.ml  Pprintast.mli  Printast.ml  ast.ml  ast.mli  compiler.ml  compiler.mli  dune  inferencer.ml  inferencer.mli  interpret.ml  interpret.mli  lambda.ml  lambda.mli  monads.ml  monads.mli  parser.ml  parser.mli  tests.ml  type.ml  type.mli  utils.ml  utils.mli
NSamodurov/tests/: dune  interpret_tests.t  parser.ml
Nechaeva/: Nechaeva.opam  dune-project
Nechaeva/lib/: ast.mli  dune  interpret.ml  interpret.mli  parser.ml  parser.mli  printast.ml  printast.mli
Nechaeva/tests/: dune  gen_tests.ml  interpret_tests.t  parser_tests.ml  parser_tests.mli
OOP_Shaehmitov/: OOP_Shaehmitov.opam  dune-project
Oderiy/: Makefile  Oderiy.opam  dune-project
Oderiy/lib/: ast.ml  ast.mli  dune  interpret.ml  interpret.mli  parser.ml  parser.mli  print.ml  print.mli
Oderiy/tests/: builtin_fix.miniml  dune  factorial.miniml  fibonacci.miniml  fix_factorial.miniml  interpret_test.ml  miniml_tests.t  parser_test.ml  print_test.ml  print_test.mli  qcheck_test.ml
Shoyunchap/tests/: dune  interpret.t  interpret_cli.ml  interpret_cov.ml  parser_prop_tests.ml  parser_tests.ml  printer_tests.ml
Smirnov/: .zanuda  Smirnov.opam  Smirnov.opam.locked  Smirnov.opam.template  dune-project
Smirnov/lib/: QCheck_tests.ml  ast.ml  dune  lambda.ml  lexer.mll  mardukml.ml  parser.mly  tests.ml  typing.ml
Smirnov/tests/: interpret_tests.t
Svirukov/: Makefile  Svirukov.opam  dune-project
Svirukov/lib/: ast.mli  dune  inferencer.ml  inferencer.mli  interpret.ml  interpret.mli  parser.ml  parser.mli  print.ml  print.mli  tests.ml
Svirukov/test/: dune  interpret_tests.t  parser_gentest.ml  parser_test.ml
Svirukov/tests/: dune  inference.t  interpret_tests.t  parser_gentest.ml  parser_test.ml
Tenyaeva/lib/: ast.ml  dune  interpreter.ml  interpreter.mli  monad.ml  monad.mli  parser.ml  parser.mli  pprinter.ml  pprinter.mli  qcheck.ml  qcheck.mli
Yackovlev/: Makefile  Yackovlev.opam  dune-project
Yackovlev/lib/: Pprintast.ml  Printast.ml  Printast.mli  ast.mli  dune  interpret.ml  interpret.mli  parser.ml  parser.mli
Yackovlev/tests/: dune  gen_tests.ml  interpret_tests.t  parser_test.ml
miniML_Churin/: dune-project  miniML_Churin.opam
miniML_Churin/lib/: Pprintast.ml  ast.ml  dune  interpret.ml  parser.ml
miniML_Churin/tests/: dune  interpret_tests.ml  interpret_tests.t  parser_tests.ml
(+908 files in other folders)
