(lang dune 3.7)

(generate_opam_files true)

(cram enable)

(license LGPL-3.0-or-later)

(authors "Ram Prosad Chandra Sutra Dhar")

(maintainers "Ram Prosad Chandra Sutra Dhar")

(bug_reports "https://github.com/Kakadu/fp25")

(homepage "https://github.com/Kakadu/fp25")

(package
 (name EChandraSutraDhar)
 (synopsis "An interpreter")
 (description
  "FIXME. A longer description, for example, which are the most interesing features being supported, etc.")
 (documentation "https://kakadu.github.io/fp25/docs/Lambda")
 (version 0.1)
 (depends
  dune
  angstrom
  (ppx_inline_test :with-test)
  ppx_expect
  ppx_deriving
  bisect_ppx
  (odoc :with-doc)
  (ocamlformat :build)
  base
  ))