(lang dune 3.7)

(generate_opam_files true)

(cram enable)

(license "LGPL-3.0-or-later WITH OCaml-LGPL-linking-exception")

(authors
  "Samodurov Nikita <nikita98351@gmail.com>"
)

(maintainers "Samodurov Nikita <nikita98351@gmail.com>")

(bug_reports "https://github.com/Kakadu/fp25")

(homepage "https://github.com/Kakadu/fp25")

(package
 (name NSamodurov) ; FIXME and regenerate .opam file using 'dune build @install'
 (synopsis "MiniML")
 (description
  "implementaiton of ML-like language interpreter")
 (documentation "https://kakadu.github.io/fp25/docs/Lambda")
 (version 0.1)
 (depends
  (dune
   (= "3.19.1"))
  (angstrom
   (= "0.16.0"))
  base
  (ppx_inline_test :with-test)
   ppx_expect
   ppx_show
   ppx_deriving
   qcheck
   qcheck-core
   bisect_ppx
   stdune
  (odoc :with-doc)
  (ocamlformat
   (and
    :build
    (= "0.26.2")))
  ))
