(lang dune 3.7)

(generate_opam_files true)

(cram enable)

(license "LGPL-3.0-or-later WITH OCaml-LGPL-linking-exception")

(authors "Shamil Shaehmitov samilsaehmitov@gmail.com")

(maintainers "Shamil Shaehmitov samilsaehmitov@gmail.com")

(bug_reports "https://github.com/Kakadu/fp25")

(homepage "https://github.com/Kakadu/fp25")

(package
 (name OOP_Shaehmitov) ; FIXME and regenerate .opam file using 'dune build @install'
 (synopsis "Shaehmitov MiniML")
 (description
  "An interpreter for a small functional programming language similar to OCaml.")
 (documentation "https://kakadu.github.io/fp25/docs/Lambda")
 (version 0.1)
 (depends
  (dune
   (= "3.19.1"))
  (angstrom
   (= "0.16.0"))
  base
  (ppx_inline_test :with-test)
  ppx_expect
  ppx_deriving
  bisect_ppx
  ppx_deriving_qcheck
  qcheck
  (odoc :with-doc)
  (ocamlformat
   (and
    :build
    (= "0.26.2")))
  ; base
  ; After adding dependencies to 'dune' files add the same dependecies here too
  ))
