(lang dune 3.7)

(generate_opam_files true)

(cram enable)

(license "LGPL-3.0-or-later WITH OCaml-LGPL-linking-exception")

(authors
 "Oderiy Yaroslav <tch.xr@ya.ru>")

(maintainers "Oderiy Yaroslav <tch.xr@ya.ru>")

(bug_reports "https://github.com/Kakadu/fp25")

(homepage "https://github.com/Kakadu/fp25")

(package
 (name Oderiy)
 (synopsis "An interpreter for miniML language")
 (description
  "A miniML interpreter with call-by-value semantics, recursive functions, and Fix operator.")
 (documentation "https://kakadu.github.io/fp25/docs/Oderiy")
 (version 0.1)
 (depends
  (dune
   (= "3.21.0"))
  (angstrom
   (= "0.16.0"))
  base
  (ppx_inline_test :with-test)
  ppx_expect
  ppx_deriving
  bisect_ppx
  (odoc :with-doc)
  (ocamlformat
   (and
    :build
    (= "0.26.2")))
  ; base
  ; After adding dependencies to 'dune' files add the same dependecies here too
  ))
