(lang dune 3.7)

(generate_opam_files true)

(cram enable)

(using menhir 2.1)

(license "LGPL-3.0-or-later WITH OCaml-LGPL-linking-exception")

(authors
 "Kirill Smirnov <kirill.k.smirnov@gmail.com>"
 "Aššur-naṣir-apli II <šarrum@aššur.akkad>")

(maintainers "Kirill Smirnov <kirill.k.smirnov@gmail.com>")

(bug_reports "https://github.com/Kakadu/fp25")

(homepage "https://github.com/Kakadu/fp25")

(package
 (name Smirnov) ; FIXME and regenerate .opam file using 'dune build @install'
 (synopsis "An interpreter for language MardukML")
 (description
  "A longer description, for example, which are the most interesing features being supported, etc.")
 (documentation "https://kakadu.github.io/fp25/docs/Lambda")
 (version 0.1)
 (depends
  (dune
   (= "3.19.1"))
  base
  (ppx_inline_test :with-test)
  ppx_expect
  ppx_deriving
  ppx_deriving_qcheck
  (ppxlib
   (= "0.35.0"))
  (bisect_ppx
   (= "2.8.3"))
  (qcheck-core
   (= "0.91"))
  (odoc :with-doc)
  (ocamlformat
   (and
    :build
    (= "0.26.2")))
  ; base
  ; After adding dependencies to 'dune' files add the same dependecies here too
  ))
