(library
 (name c_sharp_strange_lib)
 (public_name CSharpStrange_Kuznetsov.Lib)
 (modules Ast Parser Prettyprinter Typecheck Monads Common Interpret)
 (libraries angstrom base)
 (preprocess
  (pps ppx_deriving.show ppx_deriving.eq ppx_expect ppx_inline_test))
 (instrumentation
  (backend bisect_ppx)))
