(library
 (name tests)
 (public_name CSharpStrange.Lib.Tests)
 (modules Parser_tests Pp_tests Typecheck_tests Interpret_tests)
 (libraries angstrom c_sharp_strange_lib qcheck)
 (inline_tests)
 (instrumentation
  (backend bisect_ppx))
 (preprocess
  (pps ppx_expect)))

(cram
 (applies_to ast_fact)
 (deps ../bin/REPL.exe ../bin/factorial.cs))
