(library
 (name miniml_lib)
 (public_name Davletshin.Lib)
 (modules Ast Interpret Parser Printast Pprintast utils)
 (libraries base angstrom)
 (preprocess
  (pps ppx_deriving.show ppx_deriving.eq))
 (instrumentation
  (backend bisect_ppx)))

(library
 (name tests)
 (modules tests)
 (libraries miniml_lib)
 (preprocess
  (pps ppx_expect ppx_deriving.show))
 (instrumentation
  (backend bisect_ppx))
 (inline_tests))
