(library
 (name tests)
 (libraries Filichkin_lib qcheck)
 (modules parser_test interprate_test typecheck_test)
 (preprocess
  (pps ppx_expect ppx_deriving.show))
 (inline_tests
  (backend ppx_expect))
 (instrumentation
  (backend bisect_ppx)))

(test
 (name qcheck_test)
 (libraries Filichkin_lib qcheck)
 (modules qcheck_test))

(cram
 (applies_to interpret)
 (deps ../bin/REPL.exe))
