(test
 (name parser_qcheck)
 (libraries interpret_lib qcheck)
 (modules parser_qcheck))

(library
 (name expect_tests)
 (libraries interpret_lib)
 (modules parser_expect interpret_expect)
 (inline_tests)
 (preprocess
  (pps ppx_expect)))

(cram
 (applies_to interpret_tests)
 (deps ../bin/REPL.exe))
