(library
 (name miniml_lib)
 (public_name Miniml.Lib)
 (modules Ast Interpret Parser Pprintast utils)
 (modules_without_implementation ast)
 (libraries base angstrom)
 (preprocess
  (pps ppx_deriving.show))
 (instrumentation
  (backend bisect_ppx)))

(library
 (name tests)
 (modules tests)
 (libraries miniml_lib qcheck)
 (preprocess
  (pps ppx_expect ppx_deriving.show))
 (instrumentation
  (backend bisect_ppx))
 (inline_tests))
