(library
 (name mardukml_lib)
 (public_name Smirnov.Lib)
 (modules Ast Lambda Parser Lexer Mardukml Typing)
 (preprocess
  (pps ppx_deriving.eq ppx_deriving_qcheck))
 (instrumentation
  (backend bisect_ppx))
 (libraries menhirLib qcheck-core))

(ocamllex lexer)

(menhir
 (modules parser))

(library
 (name tests)
 (modules tests)
 (libraries mardukml_lib)
 (preprocess
  (pps ppx_expect))
 (instrumentation
  (backend bisect_ppx))
 (inline_tests))

(test
 (name QCheck_tests)
 (modules QCheck_tests)
 (preprocess
  (pps ppx_deriving.eq ppx_deriving_qcheck))
 (libraries mardukml_lib qcheck-core.runner)
 (instrumentation
  (backend bisect_ppx)))
