(library
 (name tenyaeva_lib)
 (public_name Tenyaeva.Lib)
 (modules ast parser)
 (libraries base angstrom)
 (preprocess
  (pps ppx_deriving.show))
 (instrumentation
  (backend bisect_ppx)))

; (library
;  (name tests)
;  (modules tests)
;  (libraries lambda_lib)
;  (preprocess
;   (pps ppx_expect ppx_deriving.show))
;  (instrumentation
;   (backend bisect_ppx))
;  (inline_tests))
