(library
 (name tenyaeva_lib)
 (public_name Tenyaeva.Lib)
 (modules ast parser pprinter)
 (libraries base angstrom qcheck-core qcheck-core.runner)
 (preprocess
  (pps ppx_deriving.show ppx_deriving_qcheck))
 (instrumentation
  (backend bisect_ppx)))

(executable
 (name qcheck)
 (public_name qcheck)
 (libraries tenyaeva_lib)
 (modules qcheck)
 (instrumentation
  (backend bisect_ppx)))
